# kairo

./: .gitignore  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
.github/workflows/: ci.yml  release.yml
docker/: Dockerfile  build.sh  docker-compose.yml
docs/extensions/: README.md
docs/user-guide/: README.md  kanban.md  linking.md  slash-commands.md
sample-extensions/activity-log/: index.js  manifest.json
sample-extensions/auto-save/: index.js  manifest.json
sample-extensions/command-enhancer/: index.js  manifest.json
sample-extensions/daily-notes/: index.js  manifest.json
sample-extensions/focus-mode/: index.js  manifest.json
sample-extensions/note-stats/: index.js  manifest.json
sample-extensions/preview-enhancer/: index.js  manifest.json
sample-extensions/quick-actions/: index.js  manifest.json
sample-extensions/search-enhancer/: index.js  manifest.json
sample-extensions/themes-pack/: index.js  manifest.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: .gitkeep  icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: dataview.rs  db.rs  diagram.rs  extensions.rs  kanban.rs  mod.rs  notes.rs  plugin.rs  search.rs  settings.rs  vault.rs
src-tauri/src/db/: dataview.rs  indexer.rs  mod.rs  schema.rs  search.rs
src-tauri/src/fs/: watcher.rs
src-tauri/src/git/: config.rs  credentials.rs  error.rs  mod.rs  operations.rs
website/: download.html  features.html  index.html  nginx.conf  styles.css
(+112 files in other folders)
